--- a/HW3/css/style.css
+++ b/HW3/css/style.css
@@ -5,15 +5,29 @@
   padding: 30px;
 }
 
-.col-md-8{
-  padding: 10px;
+.my-style-class{
+  padding-right: 10px;
   box-sizing: border-box;
   justify-content: left;
 }
 
-.navbar {
-    margin-bottom: 3rem;
+.navcontainer{
+    width: 100%;
+    padding-left: 20px;
     background-color: #428bca;
+}
+
+.navbar-default {
+	width: 100%;
+}
+
+.navbar-nav {
+	width: 100%;
+}
+
+.nav-link {
+	color: white;
+	padding: 20px;
 }
 
 .blog-header {
@@ -86,8 +100,5 @@ a {
 	font-family: Georgia;	
 }
 
-@media screen and (max-width: 600px) { 
-  .row {
-    flex-direction: column-reverse;
-  }
+
 
