--- a/FinalProject_2/css/main.css
+++ b/FinalProject_2/css/main.css
@@ -45,7 +45,7 @@ img {
 /* The Modal (background) */
 
 .modal {
-  display: flex;
+  display: none;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
