--- a/FinalProject_ModalTest/css/main.css
+++ b/FinalProject_ModalTest/css/main.css
@@ -46,7 +46,7 @@ img {
 /* The Modal (background) */
 
 .modal {
-  display: flex;
+  display: none;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
@@ -70,7 +70,7 @@ img {
 }
 
 /* Modal Content (Text) */
-#caption {
+.caption {
     width: 80%;
     max-width: 700px;
     text-align: left;
